# anki-deck-builder

./: .gitignore  Cargo.toml  Makefile  README.md  shell.nix
docs/: ANKICONNECT_SETUP.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE8_SUMMARY.md  PROGRESS_SUMMARY.md  PROJECT_COMPLETE.md  PROJECT_PLAN.md  USER_GUIDE.md
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/ankiweb/: client.rs  mod.rs  models.rs
src/language/: frequency.rs  frequency_fetcher.rs  frequency_loader.rs  languages.rs  libre_translate.rs  mod.rs  mymemory_translate.rs  translator.rs
tests/: ankiconnect_integration.rs
